--- a/style.css
+++ b/style.css
@@ -1811,17 +1811,13 @@ a.abp-js-gohome.link.link_back:hover {
 /*------------------------------------ ENLACE ----------------------------------------------*/
 #actividad a {
     text-decoration: underline;
-    background: #FBBF28;
     color: #0068B3;
     padding: 3px 10px;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
-    border-radius: 15px;
     font-weight: 700;
 }
 
 #actividad a:hover {
-    padding: 3px 20px;
+    color: #f89c38;
 }
 
 /*Botón de sonido*/
