--- a/style.css
+++ b/style.css
@@ -1919,7 +1919,7 @@ color: #f89c38;
 
 #actividad .carousel-inner .item-container:after {
   content: "";
-  background-image: url(https://wwww.blinklearning.com/useruploads/r/a/161091156/activity_other_imported/ODS_1_376696.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161091156/activity_other_imported/ODS_1_376696.png);
   top: 26px;
   position: absolute;
   background-size: contain;
@@ -2064,7 +2064,7 @@ color: #f89c38;
 
 /*unittag_sanporabpobjetivo1*/
 .unittag_sanporabpobjetivo1 #actividad .carousel-inner .item-container:after {
-  background-image: url(https://wwww.blinklearning.com/useruploads/r/a/161091156/activity_other_imported/ODS_1_376696.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161091156/activity_other_imported/ODS_1_376696.png);
   top: 32px;
   padding: 30px 469px;
 }
@@ -2074,7 +2074,7 @@ color: #f89c38;
   background-color: #DDA73A;
 }
 .unittag_sanporabpobjetivo2 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233416/activity_other_imported/ODS_2_332181.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233416/activity_other_imported/ODS_2_332181.png);
 }
 
 /*unittag_sanporabpobjetivo3*/
@@ -2082,7 +2082,7 @@ color: #f89c38;
   background-color: #4CA146;
 }
 .unittag_sanporabpobjetivo3 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233446/activity_other_imported/ODS_3_742412.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233446/activity_other_imported/ODS_3_742412.png);
 }
 
 /*unittag_sanporabpobjetivo4*/
@@ -2090,7 +2090,7 @@ color: #f89c38;
   background-color: #C7212F;
 }
 .unittag_sanporabpobjetivo4 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233456/activity_other_imported/ODS_4_684916.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233456/activity_other_imported/ODS_4_684916.png);
 }
 
 /*unittag_sanporabpobjetivo5*/
@@ -2098,7 +2098,7 @@ color: #f89c38;
   background-color: #EF402D;
 }
 .unittag_sanporabpobjetivo5 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233566/activity_other_imported/ODS_5_829863.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233566/activity_other_imported/ODS_5_829863.png);
 }
 
 /*unittag_sanporabpobjetivo6*/
@@ -2106,7 +2106,7 @@ color: #f89c38;
   background-color: #27BFE6;
 }
 .unittag_sanporabpobjetivo6 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233576/activity_other_imported/ODS_6_649712.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233576/activity_other_imported/ODS_6_649712.png);
 }
 
 /*unittag_sanporabpobjetivo7*/
@@ -2114,7 +2114,7 @@ color: #f89c38;
   background-color: #FBC412;
 }
 .unittag_sanporabpobjetivo7 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233606/activity_other_imported/ODS_7_984313.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233606/activity_other_imported/ODS_7_984313.png);
 }
 
 /*unittag_sanporabpobjetivo8*/
@@ -2122,7 +2122,7 @@ color: #f89c38;
   background-color: #A31C44;
 }
 .unittag_sanporabpobjetivo8 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233666/activity_other_imported/ODS_8_123799.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233666/activity_other_imported/ODS_8_123799.png);
 }
 
 /*unittag_sanporabpobjetivo9*/
@@ -2130,7 +2130,7 @@ color: #f89c38;
   background-color: #F26A2E;
 }
 .unittag_sanporabpobjetivo9 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233816/activity_other_imported/ODS_9_478618.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233816/activity_other_imported/ODS_9_478618.png);
 }
 
 /*unittag_sanporabpobjetivo10*/
@@ -2138,7 +2138,7 @@ color: #f89c38;
   background-color: #DD2A66;
 }
 .unittag_sanporabpobjetivo10 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233826/activity_other_imported/ODS_10_135392.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233826/activity_other_imported/ODS_10_135392.png);
 }
 
 /*unittag_sanporabpobjetivo11*/
@@ -2146,7 +2146,7 @@ color: #f89c38;
   background-color: #F89D2A;
 }
 .unittag_sanporabpobjetivo11 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233846/activity_other_imported/ODS_11_377416.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233846/activity_other_imported/ODS_11_377416.png);
 }
 
 /*unittag_sanporabpobjetivo12*/
@@ -2154,7 +2154,7 @@ color: #f89c38;
   background-color: #BF8D2C;
 }
 .unittag_sanporabpobjetivo12 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233866/activity_other_imported/ODS_12_717861.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233866/activity_other_imported/ODS_12_717861.png);
 }
 
 /*unittag_sanporabpobjetivo13*/
@@ -2162,7 +2162,7 @@ color: #f89c38;
   background-color: #407F46;
 }
 .unittag_sanporabpobjetivo13 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233876/activity_other_imported/ODS_13_742451.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233876/activity_other_imported/ODS_13_742451.png);
 }
 
 /*unittag_sanporabpobjetivo14*/
@@ -2170,7 +2170,7 @@ color: #f89c38;
   background-color: #1F97D4;
 }
 .unittag_sanporabpobjetivo14 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233896/activity_other_imported/ODS_14_265155.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233896/activity_other_imported/ODS_14_265155.png);
 }
 
 /*unittag_sanporabpobjetivo15*/
@@ -2178,7 +2178,7 @@ color: #f89c38;
   background-color: #59BA49;
 }
 .unittag_sanporabpobjetivo15 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233926/activity_other_imported/ODS_15_289716.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233926/activity_other_imported/ODS_15_289716.png);
 }
 
 /*unittag_sanporabpobjetivo16*/
@@ -2186,7 +2186,7 @@ color: #f89c38;
   background-color: #136A9F;
 }
 .unittag_sanporabpobjetivo16 #actividad .carousel-inner .item-container:after {
-  background-image: url(www.blinklearning.com/useruploads/r/a/161233936/activity_other_imported/ODS_16_864565.png);
+  background-image: url(https://www.blinklearning.com/useruploads/r/a/161233936/activity_other_imported/ODS_16_864565.png);
 }
 
 
@@ -2242,58 +2242,58 @@ and (max-device-width : 480px) {
       top: 29px;
       padding: 24px 143px;
       left: 37px;
-      background-image: url(www.blinklearning.com/useruploads/r/a/169436186/activity_other_imported/Tel_01.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169436186/activity_other_imported/Tel_01.png);
   }
   .unittag_sanporabpobjetivo1 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169436186/activity_other_imported/Tel_01.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169436186/activity_other_imported/Tel_01.png);
       top: 29px;
       padding: 24px 143px;
       left: 37px;
   }
   .unittag_sanporabpobjetivo2 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169437476/activity_other_imported/Tel_02.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169437476/activity_other_imported/Tel_02.png);
   }
   .unittag_sanporabpobjetivo3 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169437496/activity_other_imported/Tel_03.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169437496/activity_other_imported/Tel_03.png);
   }
   .unittag_sanporabpobjetivo4 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169438196/activity_other_imported/Tel_04.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169438196/activity_other_imported/Tel_04.png);
   }
   .unittag_sanporabpobjetivo5 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169440316/activity_other_imported/Tel_05.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169440316/activity_other_imported/Tel_05.png);
   }
   .unittag_sanporabpobjetivo6 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169440356/activity_other_imported/Tel_06.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169440356/activity_other_imported/Tel_06.png);
   }
   .unittag_sanporabpobjetivo7 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169440386/activity_other_imported/Tel_07.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169440386/activity_other_imported/Tel_07.png);
   }
   .unittag_sanporabpobjetivo8 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169440406/activity_other_imported/Tel_08.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169440406/activity_other_imported/Tel_08.png);
   }
   .unittag_sanporabpobjetivo9 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169440456/activity_other_imported/Tel_09.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169440456/activity_other_imported/Tel_09.png);
   }
   .unittag_sanporabpobjetivo10 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169442716/activity_other_imported/Tel_10.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169442716/activity_other_imported/Tel_10.png);
   }
   .unittag_sanporabpobjetivo11 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169442736/activity_other_imported/Tel_11.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169442736/activity_other_imported/Tel_11.png);
   }
   .unittag_sanporabpobjetivo12 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169442746/activity_other_imported/Tel_12.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169442746/activity_other_imported/Tel_12.png);
   }
   .unittag_sanporabpobjetivo13 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169442766/activity_other_imported/Tel_13.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169442766/activity_other_imported/Tel_13.png);
   }
   .unittag_sanporabpobjetivo14 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169442776/activity_other_imported/Tel_14.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169442776/activity_other_imported/Tel_14.png);
   }
   .unittag_sanporabpobjetivo15 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169442786/activity_other_imported/Tel_15.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169442786/activity_other_imported/Tel_15.png);
   }
   .unittag_sanporabpobjetivo16 #actividad .carousel-inner .item-container:after {
-      background-image: url(www.blinklearning.com/useruploads/r/a/169443486/activity_other_imported/Tel_16.png);
+      background-image: url(https://www.blinklearning.com/useruploads/r/a/169443486/activity_other_imported/Tel_16.png);
   }
 }
 
@@ -2354,8 +2354,9 @@ and (max-device-width : 480px) {
   }
 /* Titulos y TAB en primera pantalla */
   #layout-container #main-screen #course-header .course-title span {
-      font-size: 26px;
+      font-size: 18px;
       font-weight: 300;
+      text-align: justify;
   }
 
   @media (min-width: 1024px){
@@ -2394,7 +2395,7 @@ and (max-device-width : 480px) {
       max-width: 960px;
       margin: 0 auto;
   }
-  .go-back button {
+  .go-back button, body #layout-container div.go-back button {
       background: #eaedee;
       color: black;
       padding: 4px 15px 4px 7px;
@@ -2408,16 +2409,23 @@ and (max-device-width : 480px) {
       height: 30px;
       margin: 7px 0 7px 1px;
   }
-  .go-back button span {
+  .go-back button span, body #layout-container div.go-back button span {
       font-size: 13px;
   }
-  .go-back button:hover {
+  .go-back button:hover, body #layout-container div.go-back button:hover {
       padding: 4px 20px;
       color: black;
   }
-  .go-back button:before {
+  .go-back button:before, body #layout-container div.go-back button:before {
       line-height: 0.4em;
       font-size: 32px;
+  }
+
+  @media (max-width: 476px) {
+  #layout-container div[id*="section-screen"] .go-back button:before {
+    font-size: 30px;
+    margin-top: -8px;
+    }
   }
 
   #layout-container .section-title-1 {
